# django-input-collection

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements-tests.txt  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: main.yml
demo_app/: create_objects.py  manage.py
demo_app/core/: admin.py  apps.py  tests.py  urls.py
demo_app/core/migrations/: 0001_initial.py
demo_app/core/models/: __init__.py  base.py  fileinput.py  mysql_json.py
demo_app/core/templates/poll/methods/: list_field.html
demo_app/core/views/: __init__.py  collection.py  poll.py
demo_app/demo_app/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
django_input_collection/: __init__.py  admin.py  apps.py  compat.py  encoders.py  features.py  views.py
django_input_collection/api/: __init__.py
django_input_collection/api/restframework/: api.py  collection.py  serializers.py  urls.py
django_input_collection/api/restframework/serializers/: __init__.py  bound_suggested_response.py  collected_input.py  collection_group.py  collection_instrument.py  collection_request.py  contextual_collected_input.py  measure.py  utils.py
django_input_collection/collection/: __init__.py  collectors.py  exceptions.py  matchers.py  resolvers.py  specifications.py  utils.py
django_input_collection/collection/methods/: __init__.py  base.py  defaults.py  form.py
django_input_collection/management/commands/: export_collection_schema.py  import_collection_schema.py  validate_collection_schema.py
django_input_collection/managers/: __init__.py  collected_input.py  collection_instrument.py
django_input_collection/migrations/: 0001_initial.py  0001_initial_squashed_0012_auto_20220421_2220.py  0002_auto_20181011_2231.py  0002_condition_data_getter.py  0003_auto_20181114_2036.py  0004_remove_condition_parent_instrument.py  0005_auto_20181116_1918.py  0006_auto_20190122_2117.py  0007_auto_20190122_2120.py  0008_auto_20190206_1901.py  0009_auto_20190304_2246.py  0009_group_to_segment.py  0010_auto_20190304_2247.py  0010_auto_20190306_2040.py  0011_auto_20190308_2259.py  0012_auto_20220421_2220.py  0013_alter_collectedinput_collector_class_and_more.py  _0006_auto_20190122_2113.py  _0007_datamigration_to_boundsuggestedresponse.py
django_input_collection/models/: __init__.py  base.py  collection.py  conditions.py  managers.py  utils.py
django_input_collection/schema/: README.md  __init__.py  builder.py  exporter.py  mixins.py  registry.py  serializers.py
django_input_collection/static/input/: data-api.js
django_input_collection/tests/: __init__.py  collector.py  conditions.py  factories.py  querysets.py  restframework.py  test_collector.py  test_conditions.py  test_coverage.py  test_mixins.py  test_querysets.py  test_restframework.py  test_schema.py  test_specification.py
input/: collection.py  json.py  views.py
input/api/restframework/: api.py  collection.py  serializers.py  urls.py
input/collection/: __init__.py  base.py  collectors.py  specifications.py  utils.py
input/collection/methods/: base.py
input/collection/widgets/: __init__.py  base.py  form.py
input/inputtypes/: base.py  form.py
input/migrations/: 0001_initial.py  0002_auto_20180926_2000.py  0002_conditions.py
input/models/: __init__.py  base.py  collection.py  conditions.py  managers.py  models.py  utils.py
input/static/input/: data-api.js
input/tests/: __init__.py  collector.py  conditions.py  factories.py  querysets.py  restframework.py
input/widgets/: __init__.py  base.py  form.py  utils.py
testproj/: create_objects.py  django_input_collection  manage.py
testproj/requirements/: django-1.11-py2.txt  django-2.1-py3.txt
testproj/testproj/: settings.py  urls.py  wsgi.py
testproj/testproj/core/: admin.py  apps.py  tests.py  urls.py
testproj/testproj/core/migrations/: 0001_initial.py  0002_collectedinput_mysql_json.py
testproj/testproj/core/models/: __init__.py  base.py  fileinput.py  managers.py  mysql_json.py  postgres_json.py
testproj/testproj/core/templates/: base.html  poll.html
testproj/testproj/core/templates/poll/methods/: list_form.html
testproj/testproj/core/templates/poll/widgets/: list_form.html  list_option.html
testproj/testproj/core/views/: __init__.py  collection.py  collectors.py  methods.py  poll.py  widgets.py
testproj/testproj/settings/: base.py  dev.py  dev_avalenta.py  env.py  test.py
testproj/testproj/urls/: api.py  base.py
